--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,47 @@
+* {
+  box-sizing: border-box;
+}
+
 .profile-picture {
-    height: 300px;
-    border: 2px solid red;
+  height: 300px;
+  border: 2px solid;
 }
 
 .purelogo {
-    height: 300px;
-    border: 2px;
+  height: 400px;
+  width: 100%;
+  border: 2px solid black;
+  padding: 4px;
+
+}
+
+.toprow {
+  height: 100%px;
+  border: 2px solid;
+  width: 200px
+}
+
+.grid-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  
+}
+
+.grid-item {
+
+  width: 33%;
+  font-size: 30px;
+  text-align: center;
+  border: 3px solid black;
+  margin-top: 12px;
+}
+
+.grid-big-item {
+  width: 40%;
+
+}
+
+.small-work {
+  width: 100%;
 }
